--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-vue": "^9.11.0",
+		"gh-pages": "^6.1.1",
 		"prettier": "^3.1.1",
 		"sass": "^1.62.0",
 		"sass-loader": "^13.2.2",
@@ -41,5 +42,6 @@
 		"vue-router": "^4.1.6",
 		"vue-shepherd": "^3.0.0",
 		"vue3-loading-overlay": "^0.0.0"
-	}
+	},
+	"homepage": "https://bpisaneschi.github.io/cgfi-finshock/"
 }
